--- a/src/pages/app/app.module.css
+++ b/src/pages/app/app.module.css
@@ -1,4 +1,4 @@
-.lay-out {
+.layOut {
   width: 100vw;
   height: 100vh;
 
@@ -11,5 +11,6 @@
 
   .content {
     overflow-y: scroll;
+    padding: 20px;
   }
 }
